--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,14 @@
-fastapi==0.116.1
-uvicorn[standard]==0.35.0
-pydantic==2.11.7
-backtrader==1.9.76.123
-
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+backtrader==1.9.78.123
+click==8.3.1
+fastapi==0.129.0
+h11==0.16.0
+idna==3.11
+pydantic==2.12.5
+pydantic_core==2.41.5
+starlette==0.52.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+uvicorn==0.40.0
